Got internationalization working for achievement completed screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -269,40 +269,6 @@
   "aiUploadFeatureDescription": "Easily upload items with automatic metadata tagging. Let AI handle the details!",
   "selectItemsToCreateOutfit": "Select items to create your outfit.",
   "unsavedChangesMessage": "You have unsaved changes. Please save or discard them before selecting a photo.",
-  "noNewClothes90Achievement": "Sustainable Start!",
-  "noNewClothes90AchievementMessage": "You’ve hit 90 days without new clothes! Keep building those eco-friendly habits! 🌱",
-  "noNewClothes225Achievement": "Eco-Warrior in the Making!",
-  "noNewClothes225AchievementMessage": "225 days and counting! Your closet is thriving, and so is the planet. 🌍",
-  "noNewClothes405Achievement": "Champion of Conscious Choices!",
-  "noNewClothes405AchievementMessage": "405 days strong! Your commitment to conscious fashion is an inspiration.",
-  "noNewClothes630Achievement": "Sustainability Leader!",
-  "noNewClothes630AchievementMessage": "630 days without new clothes—you're leading by example! Keep going!",
-  "noNewClothes900Achievement": "Trailblazer of Change!",
-  "noNewClothes900AchievementMessage": "900 days of conscious choices! You’re setting trends and making waves in sustainability!",
-  "noNewClothes1215Achievement": "Icon of Sustainability!",
-  "noNewClothes1215AchievementMessage": "1,215 days of intentional living! Your journey is inspiring others to follow in your footsteps.",
-  "noNewClothes1575Achievement": "Master of Minimalism!",
-  "noNewClothes1575AchievementMessage": "1,575 days of embracing what you have. You're rewriting the rules of fashion!",
-  "noNewClothes1980Achievement": "Beacon of Sustainability!",
-  "noNewClothes1980AchievementMessage": "1,980 days of dedication to mindful choices! You're a shining example of sustainable living and an inspiration to us all. ✨🌏",
-  "allClothesWornAchievement": "All Clothes, All You!",
-  "allClothesWornAchievementMessage": "You've worn every single item in your closet! You're mastering mindful fashion choices.",
-  "closetUploadAchievement": "Virtual Closet Complete!",
-  "closetUploadAchievementMessage": "Congratulations! You've uploaded all your items to your virtual closet. Now you can style like a pro!",
-  "firstSelfieTakenAchievement": "Selfie Superstar!",
-  "firstSelfieTakenAchievementMessage": "You’ve taken your first selfie! Show off your style and let your closet shine!",
-  "firstOutfitCreatedAchievement": "Outfit Architect!",
-  "firstOutfitCreatedAchievementMessage": "Your first outfit is ready! You're on your way to mastering your style.",
-  "firstItemGiftedAchievement": "Generous Giver!",
-  "firstItemGiftedAchievementMessage": "You’ve gifted your first item! Your style is making someone else’s day brighter.",
-  "firstItemPicEditedAchievement": "Picture Perfect!",
-  "firstItemPicEditedAchievementMessage": "Your first item picture has been edited! Your closet is looking better than ever.",
-  "firstItemSoldAchievement": "Smart Seller!",
-  "firstItemSoldAchievementMessage": "You’ve sold your first item! Way to turn your closet into cash and make space for new looks.",
-  "firstItemSwapAchievement": "Sustainable Swapper!",
-  "firstItemSwapAchievementMessage": "You’ve swapped your first item! Your wardrobe just got a stylish and sustainable refresh.",
-  "firstItemUploadAchievement": "Item Initiator!",
-  "firstItemUploadAchievementMessage": "Your first item is uploaded! Your virtual closet journey has begun!",
   "defaultAchievementTitle": "Achievement Unlocked!",
   "defaultAchievementMessage": "You’ve reached a new milestone! Keep up the great work as you continue your journey towards mindful fashion.",
   "unableToProcessAccountDeletion": "We’re unable to process your account deletion right now. Could you kindly email us at support@example.com for assistance?",
@@ -557,6 +523,41 @@
   "tutorialClosetUploadedTitle": "Closet Upload Tutorial",
   "tutorialScenarioTitle": "Scenario Tutorial",
 
+  "defaultAchievementAllClothesWornMessage": "You've worn every single item in your closet! You're mastering mindful fashion choices.",
+  "defaultAchievementAllClothesWornTitle": "All Clothes, All You!",
+  "defaultAchievementClosetUploadedMessage": "Congratulations! You've uploaded all your items to your virtual closet. Now you can style like a pro!",
+  "defaultAchievementClosetUploadedTitle": "Virtual Closet Complete!",
+  "defaultAchievementFirstItemGiftedMessage": "You’ve gifted your first item! Your style is making someone else’s day brighter.",
+  "defaultAchievementFirstItemGiftedTitle": "Generous Giver!",
+  "defaultAchievementFirstItemPicEditedMessage": "Your first item picture has been edited! Your closet is looking better than ever.",
+  "defaultAchievementFirstItemPicEditedTitle": "Picture Perfect!",
+  "defaultAchievementFirstItemSoldMessage": "You’ve sold your first item! Way to turn your closet into cash and make space for new looks.",
+  "defaultAchievementFirstItemSoldTitle": "Smart Seller!",
+  "defaultAchievementFirstItemSwapMessage": "You’ve swapped your first item! Your wardrobe just got a stylish and sustainable refresh.",
+  "defaultAchievementFirstItemSwapTitle": "Sustainable Swapper!",
+  "defaultAchievementFirstItemUploadMessage": "Your first item is uploaded! Your virtual closet journey has begun!",
+  "defaultAchievementFirstItemUploadTitle": "Item Initiator!",
+  "defaultAchievementFirstOutfitCreatedMessage": "Your first outfit is ready! You're on your way to mastering your style.",
+  "defaultAchievementFirstOutfitCreatedTitle": "Outfit Architect!",
+  "defaultAchievementFirstSelfieTakenMessage": "You’ve taken your first selfie! Show off your style and let your closet shine!",
+  "defaultAchievementFirstSelfieTakenTitle": "Selfie Superstar!",
+  "defaultAchievementNoNewClothes1215Message": "1,215 days of intentional living! Your journey is inspiring others to follow in your footsteps.",
+  "defaultAchievementNoNewClothes1215Title": "Icon of Sustainability!",
+  "defaultAchievementNoNewClothes1575Message": "1,575 days of embracing what you have. You're rewriting the rules of fashion!",
+  "defaultAchievementNoNewClothes1575Title": "Master of Minimalism!",
+  "defaultAchievementNoNewClothes1980Message": "1,980 days of dedication to mindful choices! You're a shining example of sustainable living and an inspiration to us all. ✨🌏",
+  "defaultAchievementNoNewClothes1980Title": "Beacon of Sustainability!",
+  "defaultAchievementNoNewClothes225Message": "225 days and counting! Your closet is thriving, and so is the planet. 🌍",
+  "defaultAchievementNoNewClothes225Title": "Eco-Warrior in the Making!",
+  "defaultAchievementNoNewClothes405Message": "405 days strong! Your commitment to conscious fashion is an inspiration.",
+  "defaultAchievementNoNewClothes405Title": "Champion of Conscious Choices!",
+  "defaultAchievementNoNewClothes630Message": "630 days without new clothes—you're leading by example! Keep going!",
+  "defaultAchievementNoNewClothes630Title": "Sustainability Leader!",
+  "defaultAchievementNoNewClothes900Message": "900 days of conscious choices! You’re setting trends and making waves in sustainability!",
+  "defaultAchievementNoNewClothes900Title": "Trailblazer of Change!",
+  "defaultAchievementNoNewClothes90Message": "You’ve hit 90 days without new clothes! Keep building those eco-friendly habits! 🌱",
+  "defaultAchievementNoNewClothes90Title": "Sustainable Start!",
+
   "memoryTutorialFreeUploadCameraUploadClothing": "The little things matter.\nCapture them now, find them later.",
   "memoryTutorialFreePhotoLibraryUploadClothing": "You’ve saved the moments—now sort the memories.\nOne tap brings each piece into their story.",
   "memoryTutorialFreeEditCameraDeclutterItems": "They’re growing.\nSo are the stories behind what they wore.",
@@ -574,6 +575,40 @@
   "memoryTrialOutfits": "Create outfits from pieces that carry your favorite memories.",
   "memoryTrialCalendar": "Look back by date—see the outfits that shaped your seasons.",
   "memoryTrialInsights": "See which items showed up in your story most—by use, by love, by time.",
+  "memoryAchievementAllClothesWornMessage": "You've worn all your pieces, each with its unique story.",
+  "memoryAchievementAllClothesWornTitle": "Every Memory Worn!",
+  "memoryAchievementClosetUploadedMessage": "You’ve uploaded everything you own. Now every choice is intentional—your mindful journey begins.",
+  "memoryAchievementClosetUploadedTitle": "Closet Counted!",
+  "memoryAchievementFirstItemGiftedMessage": "Your gifted item carries memories forward, enriching someone else's story.",
+  "memoryAchievementFirstItemGiftedTitle": "Memory Passed On!",
+  "memoryAchievementFirstItemPicEditedMessage": "First edit complete—your memories clearer and brighter than ever.",
+  "memoryAchievementFirstItemPicEditedTitle": "Memory Enhanced!",
+  "memoryAchievementFirstItemSoldMessage": "Your item sold—letting go, but memories linger and live on.",
+  "memoryAchievementFirstItemSoldTitle": "Memory Shared!",
+  "memoryAchievementFirstItemSwapMessage": "First swap done—new memories await with your refreshed closet.",
+  "memoryAchievementFirstItemSwapTitle": "Memory Refreshed!",
+  "memoryAchievementFirstItemUploadMessage": "Your first memory item is safely stored—ready for future reminiscing.",
+  "memoryAchievementFirstItemUploadTitle": "Memory Preserved!",
+  "memoryAchievementFirstOutfitCreatedMessage": "Your first outfit saved—a moment you'll cherish forever.",
+  "memoryAchievementFirstOutfitCreatedTitle": "Milestone Marked!",
+  "memoryAchievementFirstSelfieTakenMessage": "First selfie taken—holding onto memories one picture at a time.",
+  "memoryAchievementFirstSelfieTakenTitle": "Moment Captured!",
+  "memoryAchievementNoNewClothes1215Message": "1,215 days preserving the stories held by each outfit. Your closet is a living scrapbook of memories.",
+  "memoryAchievementNoNewClothes1215Title": "Guardian of Moments!",
+  "memoryAchievementNoNewClothes1575Message": "1,575 days of mindful living—your wardrobe is a gallery of life's most meaningful moments.",
+  "memoryAchievementNoNewClothes1575Title": "Memory Masterpiece!",
+  "memoryAchievementNoNewClothes1980Message": "1,980 days of treasuring memories through clothes. Your closet narrates your beautiful, evolving story.",
+  "memoryAchievementNoNewClothes1980Title": "Legend of Legacy!",
+  "memoryAchievementNoNewClothes225Message": "225 days honoring memories, one outfit at a time. Your wardrobe is full of moments worth remembering.",
+  "memoryAchievementNoNewClothes225Title": "Keeper of Memories!",
+  "memoryAchievementNoNewClothes405Message": "405 days living through your wardrobe—each piece a reminder of life's precious moments.",
+  "memoryAchievementNoNewClothes405Title": "Story Collector!",
+  "memoryAchievementNoNewClothes630Message": "630 days weaving life's stories through your clothes—you're curating a beautiful narrative.",
+  "memoryAchievementNoNewClothes630Title": "Memory Maestro!",
+  "memoryAchievementNoNewClothes900Message": "900 days celebrating your life's journey through clothes. Every outfit tells a cherished story.",
+  "memoryAchievementNoNewClothes900Title": "Historian of the Heart!",
+  "memoryAchievementNoNewClothes90Message": "90 days cherishing your wardrobe memories. Every piece worn carries a precious story.",
+  "memoryAchievementNoNewClothes90Title": "90 Days of Moments!",
 
   "personalStyleTrialFilter": "Narrow your closet by name, item type to define your unique look.",
   "personalStyleTrialCustomize": "Reorganize your layout to reflect what feels like you right now.",
@@ -581,11 +616,79 @@
   "personalStyleTrialOutfits": "Mix and match across days to discover your evolving style.",
   "personalStyleTrialCalendar": "Watch your style change over time, one day at a time.",
   "personalStyleTrialInsights": "Reveal your most-used items, favorite outfits, and style patterns.",
+  "personalStyleAchievementAllClothesWornMessage": "You've confidently worn every piece you own! Keep embracing your personal style.",
+  "personalStyleAchievementAllClothesWornTitle": "Fully You!",
+  "personalStyleAchievementClosetUploadedMessage": "Your closet upload is complete. Confidence awaits in every combination.",
+  "personalStyleAchievementClosetUploadedTitle": "Your Closet, Curated!",
+  "personalStyleAchievementFirstItemGiftedMessage": "You've passed along a piece of your style. Confidence looks good on both of you!",
+  "personalStyleAchievementFirstItemGiftedTitle": "Style Shared!",
+  "personalStyleAchievementFirstItemPicEditedMessage": "Your item's picture is updated—your closet matches your confidence.",
+  "personalStyleAchievementFirstItemPicEditedTitle": "Styled to Perfection!",
+  "personalStyleAchievementFirstItemSoldMessage": "You’ve sold your first item, refining your closet to what truly feels good.",
+  "personalStyleAchievementFirstItemSoldTitle": "Curator of Confidence!",
+  "personalStyleAchievementFirstItemSwapMessage": "You’ve swapped your first piece. Keep discovering what makes you feel best.",
+  "personalStyleAchievementFirstItemSwapTitle": "Confidence Exchange!",
+  "personalStyleAchievementFirstItemUploadMessage": "You've uploaded your first item. Let's discover the styles that feel uniquely you.",
+  "personalStyleAchievementFirstItemUploadTitle": "Confidence Unlocked!",
+  "personalStyleAchievementFirstOutfitCreatedMessage": "Your first outfit is crafted. Revisit this look to feel great anytime.",
+  "personalStyleAchievementFirstOutfitCreatedTitle": "Signature Look Set!",
+  "personalStyleAchievementFirstSelfieTakenMessage": "Your first selfie captured! Celebrate your style journey.",
+  "personalStyleAchievementFirstSelfieTakenTitle": "Own Your Style!",
+  "personalStyleAchievementNoNewClothes1215Message": "1,215 days proving true style is timeless! You're a role model of authentic self-expression.",
+  "personalStyleAchievementNoNewClothes1215Title": "Legendary Style!",
+  "personalStyleAchievementNoNewClothes1575Message": "1,575 days curating a closet of confidence—your style speaks volumes without saying a word.",
+  "personalStyleAchievementNoNewClothes1575Title": "Architect of Authenticity!",
+  "personalStyleAchievementNoNewClothes1980Message": "1,980 days embodying your unique identity through fashion. You're redefining what it means to dress confidently.",
+  "personalStyleAchievementNoNewClothes1980Title": "Pinnacle of Personal Style!",
+  "personalStyleAchievementNoNewClothes225Message": "225 days of rediscovering your wardrobe! You're defining confidence on your own terms.",
+  "personalStyleAchievementNoNewClothes225Title": "Style Setter!",
+  "personalStyleAchievementNoNewClothes405Message": "405 days mastering the art of personal style—your closet reflects your true self beautifully.",
+  "personalStyleAchievementNoNewClothes405Title": "Wardrobe Whisperer!",
+  "personalStyleAchievementNoNewClothes630Message": "630 days confidently dressing from your own closet—you're inspiring others with your unique style.",
+  "personalStyleAchievementNoNewClothes630Title": "Confidence Creator!",
+  "personalStyleAchievementNoNewClothes900Message": "900 days of personal style mastery—your confidence is contagious and transformative!",
+  "personalStyleAchievementNoNewClothes900Title": "Style Icon!",
+  "personalStyleAchievementNoNewClothes90Message": "You've styled yourself confidently for 90 days using what you own—your personal style is thriving!",
+  "personalStyleAchievementNoNewClothes90Title": "90 Days Confident!",
 
   "lifeChangeTrialFilter": "Quickly find what suits your new routines, roles, and realities.",
   "lifeChangeTrialCustomize": "Update your closet layout to fit what matters today.",
   "lifeChangeTrialClosets": "Create closets for transitions—travel, work, motherhood, or pause.",
   "lifeChangeTrialOutfits": "Build outfits that support your day-to-day changes.",
   "lifeChangeTrialCalendar": "Track your outfits during life shifts. See what worked and when.",
-  "lifeChangeTrialInsights": "Understand what truly served you during change—by use and by season."
+  "lifeChangeTrialInsights": "Understand what truly served you during change—by use and by season.",
+  "lifeChangeAchievementAllClothesWornMessage": "Every item worn—embracing your evolving identity wholeheartedly.",
+  "lifeChangeAchievementAllClothesWornTitle": "Fully Transformed!",
+  "lifeChangeAchievementClosetUploadedMessage": "Closet uploaded—ready to support this exciting new life phase.",
+  "lifeChangeAchievementClosetUploadedTitle": "Life Updated!",
+  "lifeChangeAchievementFirstItemGiftedMessage": "Gifted your first item—clearing space for the new you.",
+  "lifeChangeAchievementFirstItemGiftedTitle": "Forward Focused!",
+  "lifeChangeAchievementFirstItemPicEditedMessage": "Edited your first item's picture—reflecting your current life beautifully.",
+  "lifeChangeAchievementFirstItemPicEditedTitle": "Ready for Renewal!",
+  "lifeChangeAchievementFirstItemSoldMessage": "Sold your first item, making room for what truly suits you now.",
+  "lifeChangeAchievementFirstItemSoldTitle": "Old to New!",
+  "lifeChangeAchievementFirstItemSwapMessage": "Swapped your first item—your wardrobe matches your life's shift.",
+  "lifeChangeAchievementFirstItemSwapTitle": "Freshly Swapped!",
+  "lifeChangeAchievementFirstItemUploadMessage": "Your first item uploaded, symbolizing a fresh start in your journey.",
+  "lifeChangeAchievementFirstItemUploadTitle": "New Chapter Begins!",
+  "lifeChangeAchievementFirstOutfitCreatedMessage": "Your first outfit recorded—perfect for embracing your new phase.",
+  "lifeChangeAchievementFirstOutfitCreatedTitle": "Transition Tracked!",
+  "lifeChangeAchievementFirstSelfieTakenMessage": "Your first selfie marks this moment—reflecting your evolving story.",
+  "lifeChangeAchievementFirstSelfieTakenTitle": "Change Documented!",
+  "lifeChangeAchievementNoNewClothes1215Message": "1,215 days crafting your wardrobe to fit life's transformations. Your adaptability inspires!",
+  "lifeChangeAchievementNoNewClothes1215Title": "Architect of Change!",
+  "lifeChangeAchievementNoNewClothes1575Message": "1,575 days gracefully navigating life's shifts. Your wardrobe reflects wisdom and growth.",
+  "lifeChangeAchievementNoNewClothes1575Title": "Seasoned Transformer!",
+  "lifeChangeAchievementNoNewClothes1980Message": "1,980 days redefining your style through life's changes—your story and wardrobe are beautifully aligned.",
+  "lifeChangeAchievementNoNewClothes1980Title": "Master of Life's Chapters!",
+  "lifeChangeAchievementNoNewClothes225Message": "225 days of intentional transformation—your closet is evolving with your life.",
+  "lifeChangeAchievementNoNewClothes225Title": "Change Champion!",
+  "lifeChangeAchievementNoNewClothes405Message": "405 days navigating life's changes stylishly—you're gracefully moving forward, wardrobe and all.",
+  "lifeChangeAchievementNoNewClothes405Title": "Adapting with Style!",
+  "lifeChangeAchievementNoNewClothes630Message": "630 days of aligning your style with your life's transitions—you're thriving in every chapter.",
+  "lifeChangeAchievementNoNewClothes630Title": "Transformation Trailblazer!",
+  "lifeChangeAchievementNoNewClothes900Message": "900 days mastering change—your closet confidently mirrors your evolving journey.",
+  "lifeChangeAchievementNoNewClothes900Title": "Reinvention Leader!",
+  "lifeChangeAchievementNoNewClothes90Message": "90 days embracing change! Your wardrobe beautifully reflects your life's new chapter.",
+  "lifeChangeAchievementNoNewClothes90Title": "90-Day Evolution!"
 }
