--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -269,40 +269,6 @@
   "aiUploadFeatureDescription": "轻松上传物品并自动生成元数据。让AI处理细节！",
   "selectItemsToCreateOutfit": "选择物品来创建您的造型。",
   "unsavedChangesMessage": "您有未保存的更改。请保存或丢弃它们，然后选择照片。",
-  "noNewClothes90Achievement": "可持续的开始！",
-  "noNewClothes90AchievementMessage": "您已达成90天不买新衣的目标！继续建立环保习惯！🌱",
-  "noNewClothes225Achievement": "环保战士在行动！",
-  "noNewClothes225AchievementMessage": "225天了！您的衣橱在成长，地球也在受益。🌍",
-  "noNewClothes405Achievement": "环保选择的冠军！",
-  "noNewClothes405AchievementMessage": "405天了！您对环保时尚的承诺令人鼓舞。",
-  "noNewClothes630Achievement": "可持续发展的领袖！",
-  "noNewClothes630AchievementMessage": "630天不买新衣—您正在引领潮流！继续加油！",
-  "noNewClothes900Achievement": "改变的先驱者！",
-  "noNewClothes900AchievementMessage": "900天的环保选择！您正在时尚领域树立可持续发展新标杆！",
-  "noNewClothes1215Achievement": "可持续时尚偶像！",
-  "noNewClothes1215AchievementMessage": "1,215天的有意生活！您的旅程正在激励他人追随您的脚步。",
-  "noNewClothes1575Achievement": "极简主义大师！",
-  "noNewClothes1575AchievementMessage": "1,575天珍惜已有之物。您正在重新定义时尚规则！",
-  "noNewClothes1980Achievement": "可持续发展的灯塔！",
-  "noNewClothes1980AchievementMessage": "1980天坚持明智的选择！你是可持续生活的光辉榜样，激励着我们所有人。✨🌏",
-  "allClothesWornAchievement": "每件衣服，都是您的选择！",
-  "allClothesWornAchievementMessage": "您已经穿过衣橱中的每一件物品！您正在掌控自己的时尚选择。",
-  "closetUploadAchievement": "虚拟衣橱已完成！",
-  "closetUploadAchievementMessage": "恭喜你！你已将所有物品上传到虚拟衣橱。现在你可以像专业人士一样搭配造型了！",
-  "firstSelfieTakenAchievement": "自拍明星！",
-  "firstSelfieTakenAchievementMessage": "你拍下了第一张自拍！展示你的风格，让你的衣橱闪耀吧！",
-  "firstOutfitCreatedAchievement": "造型大师！",
-  "firstOutfitCreatedAchievementMessage": "你的第一套造型已经完成！你正迈向掌控自己风格的道路。",
-  "firstItemGiftedAchievement": "慷慨送礼者！",
-  "firstItemGiftedAchievementMessage": "你送出了第一件物品！你的风格让别人的一天变得更加美好。",
-  "firstItemPicEditedAchievement": "完美图片！",
-  "firstItemPicEditedAchievementMessage": "你已编辑了第一张物品图片！你的衣橱看起来比以前更出色。",
-  "firstItemSoldAchievement": "聪明卖家！",
-  "firstItemSoldAchievementMessage": "你卖出了第一件物品！恭喜你把衣橱变现，同时腾出空间迎接新造型。",
-  "firstItemSwapAchievement": "可持续交换者！",
-  "firstItemSwapAchievementMessage": "你完成了第一次物品交换！你的衣橱变得既时尚又环保。",
-  "firstItemUploadAchievement": "物品发起者！",
-  "firstItemUploadAchievementMessage": "你已上传了第一件物品！你的虚拟衣橱之旅正式开始！",
   "defaultAchievementTitle": "成就解锁！",
   "defaultAchievementMessage": "您已达成一个新里程碑！继续努力，迈向环保时尚的旅程。",
   "unableToProcessAccountDeletion": "我们暂时无法处理您的账号删除请求。请发送电子邮件至support@example.com获取帮助。",
@@ -553,10 +519,44 @@
   "premiumFeatureTutorials": "高级功能教程",
   "scenarioTutorials": "场景教程",
 
-
   "tutorialFreePhotoLibraryTitle": "从相册上传",
   "tutorialClosetUploadedTitle": "衣橱上传教程",
   "tutorialScenarioTitle": "情境教程",
+
+  "defaultAchievementAllClothesWornMessage": "你已经穿过衣柜里的每一件衣服！你正在掌握有意识的时尚选择。",
+  "defaultAchievementAllClothesWornTitle": "全衣上身，都是你！",
+  "defaultAchievementClosetUploadedMessage": "恭喜你！你已将所有物品上传到虚拟衣柜。现在可以像专业人士一样搭配了！",
+  "defaultAchievementClosetUploadedTitle": "虚拟衣柜已完成！",
+  "defaultAchievementFirstItemGiftedMessage": "你送出了第一件物品！你的风格正在点亮他人的一天。",
+  "defaultAchievementFirstItemGiftedTitle": "慷慨分享者！",
+  "defaultAchievementFirstItemPicEditedMessage": "你已编辑第一张物品照片！你的衣柜看起来比以往更棒了。",
+  "defaultAchievementFirstItemPicEditedTitle": "完美照片！",
+  "defaultAchievementFirstItemSoldMessage": "你已售出第一件物品！把衣柜变成收入，同时为新风格腾出空间。",
+  "defaultAchievementFirstItemSoldTitle": "聪明卖家！",
+  "defaultAchievementFirstItemSwapMessage": "你完成了第一次换物！衣柜焕然一新，可持续又有型。",
+  "defaultAchievementFirstItemSwapTitle": "可持续交换者！",
+  "defaultAchievementFirstItemUploadMessage": "你的第一件物品已上传！虚拟衣柜之旅正式开始！",
+  "defaultAchievementFirstItemUploadTitle": "衣物上传先锋！",
+  "defaultAchievementFirstOutfitCreatedMessage": "你的第一套穿搭已创建！你正在掌握属于自己的风格。",
+  "defaultAchievementFirstOutfitCreatedTitle": "穿搭建筑师！",
+  "defaultAchievementFirstSelfieTakenMessage": "你拍下了第一张自拍！展示你的风格，让你的衣柜闪耀吧！",
+  "defaultAchievementFirstSelfieTakenTitle": "自拍之星！",
+  "defaultAchievementNoNewClothes90Message": "你已连续 90 天未添新衣！继续培养这些环保好习惯吧！🌱",
+  "defaultAchievementNoNewClothes90Title": "可持续起步！",
+  "defaultAchievementNoNewClothes225Message": "坚持 225 天了！你的衣柜在成长，地球也在受益。🌍",
+  "defaultAchievementNoNewClothes225Title": "环保战士成长中！",
+  "defaultAchievementNoNewClothes405Message": "坚持了 405 天！你对有意识时尚的承诺令人钦佩。",
+  "defaultAchievementNoNewClothes405Title": "有意识选择的冠军！",
+  "defaultAchievementNoNewClothes630Message": "连续 630 天未买新衣——你正在用行动引领潮流！继续加油！",
+  "defaultAchievementNoNewClothes630Title": "可持续领导者！",
+  "defaultAchievementNoNewClothes900Message": "900 天的有意识选择！你正引领潮流，在可持续领域掀起波澜！",
+  "defaultAchievementNoNewClothes900Title": "变革先行者！",
+  "defaultAchievementNoNewClothes1215Message": "1,215 天的有意识生活！你的旅程正激励他人跟随你的脚步。",
+  "defaultAchievementNoNewClothes1215Title": "可持续典范！",
+  "defaultAchievementNoNewClothes1575Message": "1,575 天忠于已有衣物。你正在改写时尚的规则！",
+  "defaultAchievementNoNewClothes1575Title": "极简主义大师！",
+  "defaultAchievementNoNewClothes1980Message": "1,980 天的专注选择！你是可持续生活的闪亮典范，激励着我们所有人。✨🌏",
+  "defaultAchievementNoNewClothes1980Title": "可持续灯塔！",
 
   "memoryTutorialFreeUploadCameraUploadClothing": "细节很重要。\n现在拍下，以后好找。",
   "memoryTutorialFreePhotoLibraryUploadClothing": "你已经留下了这些瞬间——现在是时候整理记忆了。\n轻轻一点，每件衣物都能找到自己的故事。",
@@ -575,6 +575,40 @@
   "memoryTrialOutfits": "用充满回忆的单品搭配出意义非凡的穿搭。",
   "memoryTrialCalendar": "按日期回顾那些塑造你季节的穿搭回忆。",
   "memoryTrialInsights": "了解在你人生故事中出现最多的单品——使用频率、情感、时间。",
+  "memoryAchievementAllClothesWornMessage": "你穿过了所有衣物，每一件都承载着独特回忆。",
+  "memoryAchievementAllClothesWornTitle": "每段记忆都穿上了！",
+  "memoryAchievementClosetUploadedMessage": "你拥有的所有衣物现在都在记忆衣橱里。从今天开始，重新出发，用心穿搭，开启你的无买挑战。",
+  "memoryAchievementClosetUploadedTitle": "衣橱归档完成！",
+  "memoryAchievementFirstItemGiftedMessage": "你送出的物品将回忆延续，丰富了别人的故事。",
+  "memoryAchievementFirstItemGiftedTitle": "回忆传递者！",
+  "memoryAchievementFirstItemPicEditedMessage": "首次编辑完成——你的回忆更加清晰、鲜明。",
+  "memoryAchievementFirstItemPicEditedTitle": "回忆更动人！",
+  "memoryAchievementFirstItemSoldMessage": "你售出了某件物品——虽然放手，但回忆仍在延续。",
+  "memoryAchievementFirstItemSoldTitle": "回忆共享者！",
+  "memoryAchievementFirstItemSwapMessage": "第一次换物完成——新的回忆即将在更新的衣柜中诞生。",
+  "memoryAchievementFirstItemSwapTitle": "回忆刷新者！",
+  "memoryAchievementFirstItemUploadMessage": "你已保存了第一件回忆物品——未来可随时怀念。",
+  "memoryAchievementFirstItemUploadTitle": "回忆守护者！",
+  "memoryAchievementFirstOutfitCreatedMessage": "你保存了第一套穿搭——这将成为你永远珍惜的时刻。",
+  "memoryAchievementFirstOutfitCreatedTitle": "重要时刻已标记！",
+  "memoryAchievementFirstSelfieTakenMessage": "你拍下了第一张自拍——一张照片留住一个回忆。",
+  "memoryAchievementFirstSelfieTakenTitle": "时光定格者！",
+  "memoryAchievementNoNewClothes90Message": "90 天珍惜衣橱回忆。每一件穿过的衣服都藏着宝贵故事。",
+  "memoryAchievementNoNewClothes90Title": "90 天的珍贵时光！",
+  "memoryAchievementNoNewClothes225Message": "225 天里，每套穿搭都在诉说值得铭记的瞬间。",
+  "memoryAchievementNoNewClothes225Title": "回忆守望者！",
+  "memoryAchievementNoNewClothes405Message": "405 天通过衣柜回顾人生——每一件都见证了珍贵时刻。",
+  "memoryAchievementNoNewClothes405Title": "故事收藏家！",
+  "memoryAchievementNoNewClothes630Message": "630 天用衣物编织生活故事——你正在打造一段美丽的叙事。",
+  "memoryAchievementNoNewClothes630Title": "回忆指挥家！",
+  "memoryAchievementNoNewClothes900Message": "900 天通过衣服庆祝人生旅程。每一套穿搭都是珍藏故事。",
+  "memoryAchievementNoNewClothes900Title": "心灵历史学家！",
+  "memoryAchievementNoNewClothes1215Message": "1,215 天保护每套穿搭背后的故事。你的衣柜是一本会呼吸的回忆书。",
+  "memoryAchievementNoNewClothes1215Title": "时光守护者！",
+  "memoryAchievementNoNewClothes1575Message": "1,575 天的有意识生活——你的衣柜是你人生重要片段的画廊。",
+  "memoryAchievementNoNewClothes1575Title": "记忆杰作！",
+  "memoryAchievementNoNewClothes1980Message": "1,980 天通过衣物珍藏回忆。你的衣柜讲述着一段美丽而动人的故事。",
+  "memoryAchievementNoNewClothes1980Title": "回忆传奇！",
 
   "personalStyleTrialFilter": "按名称、类型筛选衣物，定义你的独特风格。",
   "personalStyleTrialCustomize": "重新布局，让衣橱更符合当下的你。",
@@ -582,12 +616,79 @@
   "personalStyleTrialOutfits": "跨天搭配，发现你风格的演变。",
   "personalStyleTrialCalendar": "每天记录，见证你风格的成长。",
   "personalStyleTrialInsights": "揭示最常穿的单品、最爱的搭配与风格轨迹。",
+  "personalStyleAchievementAllClothesWornMessage": "你自信地穿上了每一件衣服！继续拥抱属于你的个人风格吧。",
+  "personalStyleAchievementAllClothesWornTitle": "完全做自己！",
+  "personalStyleAchievementClosetUploadedMessage": "你的衣柜上传完成。每种搭配都蕴藏自信。",
+  "personalStyleAchievementClosetUploadedTitle": "你的衣柜，由你策划！",
+  "personalStyleAchievementFirstItemGiftedMessage": "你分享了你的风格给他人。自信在你们之间流动！",
+  "personalStyleAchievementFirstItemGiftedTitle": "风格传递者！",
+  "personalStyleAchievementFirstItemPicEditedMessage": "物品照片已更新——你的衣柜与自信完美匹配。",
+  "personalStyleAchievementFirstItemPicEditedTitle": "风格至上！",
+  "personalStyleAchievementFirstItemSoldMessage": "你售出第一件物品，精简出真正让你感到自在的衣柜。",
+  "personalStyleAchievementFirstItemSoldTitle": "自信策展人！",
+  "personalStyleAchievementFirstItemSwapMessage": "你完成了第一次换物。继续发现最适合你的风格。",
+  "personalStyleAchievementFirstItemSwapTitle": "自信交换！",
+  "personalStyleAchievementFirstItemUploadMessage": "你上传了第一件物品。一起发现最适合你的风格表达。",
+  "personalStyleAchievementFirstItemUploadTitle": "自信开启！",
+  "personalStyleAchievementFirstOutfitCreatedMessage": "你的第一套穿搭已完成。随时回顾，让自己焕发光彩。",
+  "personalStyleAchievementFirstOutfitCreatedTitle": "标志性穿搭定格！",
+  "personalStyleAchievementFirstSelfieTakenMessage": "第一张自拍已拍下！庆祝你的风格之旅。",
+  "personalStyleAchievementFirstSelfieTakenTitle": "风格由你掌控！",
+  "personalStyleAchievementNoNewClothes90Message": "连续 90 天用已有衣物自信穿搭——你的个人风格正在闪耀！",
+  "personalStyleAchievementNoNewClothes90Title": "90 天的自信风格！",
+  "personalStyleAchievementNoNewClothes225Message": "225 天重新发现你的衣柜！你正用自己的方式定义自信。",
+  "personalStyleAchievementNoNewClothes225Title": "风格引领者！",
+  "personalStyleAchievementNoNewClothes405Message": "405 天掌握个人风格的艺术——你的衣柜完美呈现真正的你。",
+  "personalStyleAchievementNoNewClothes405Title": "衣橱共鸣者！",
+  "personalStyleAchievementNoNewClothes630Message": "630 天自信地从自己的衣柜中穿搭——你正以独特风格启发他人。",
+  "personalStyleAchievementNoNewClothes630Title": "自信塑造者！",
+  "personalStyleAchievementNoNewClothes900Message": "900 天掌握个人风格——你的自信具有感染力，令人耳目一新！",
+  "personalStyleAchievementNoNewClothes900Title": "风格偶像！",
+  "personalStyleAchievementNoNewClothes1215Message": "1,215 天证明真正的风格是永恒的！你是忠于自我的榜样。",
+  "personalStyleAchievementNoNewClothes1215Title": "风格传奇！",
+  "personalStyleAchievementNoNewClothes1575Message": "1,575 天打造自信衣柜——你的风格无需言语，已尽显风采。",
+  "personalStyleAchievementNoNewClothes1575Title": "真实风格建筑师！",
+  "personalStyleAchievementNoNewClothes1980Message": "1,980 天通过穿搭体现独特个性。你正在重新定义自信穿衣的意义。",
+  "personalStyleAchievementNoNewClothes1980Title": "个人风格巅峰！",
 
   "lifeChangeTrialFilter": "快速找到适合你新生活节奏的穿搭选择。",
   "lifeChangeTrialCustomize": "调整衣橱布局，让你专注当下所需。",
   "lifeChangeTrialClosets": "为人生过渡期设立专属衣橱——如旅行、工作、育儿或休整。",
   "lifeChangeTrialOutfits": "打造贴合每日变化的实用穿搭组合。",
   "lifeChangeTrialCalendar": "记录变化中的穿搭，了解何时穿了什么、为何如此选择。",
-  "lifeChangeTrialInsights": "深入了解哪些单品真正陪你度过转变期——从使用频率到使用时机。"
-
+  "lifeChangeTrialInsights": "深入了解哪些单品真正陪你度过转变期——从使用频率到使用时机。",
+  "lifeChangeAchievementAllClothesWornMessage": "每件衣服都穿过了——你正在全心拥抱全新的自己。",
+  "lifeChangeAchievementAllClothesWornTitle": "全面转变！",
+  "lifeChangeAchievementClosetUploadedMessage": "衣柜已上传——为这段崭新的生活阶段做好准备。",
+  "lifeChangeAchievementClosetUploadedTitle": "生活更新！",
+  "lifeChangeAchievementFirstItemGiftedMessage": "送出第一件物品——为新的自己腾出空间。",
+  "lifeChangeAchievementFirstItemGiftedTitle": "面向未来！",
+  "lifeChangeAchievementFirstItemPicEditedMessage": "你编辑了第一件物品的照片——美好地展现了当下的生活。",
+  "lifeChangeAchievementFirstItemPicEditedTitle": "焕新准备！",
+  "lifeChangeAchievementFirstItemSoldMessage": "售出第一件物品，为真正适合现在的你腾出空间。",
+  "lifeChangeAchievementFirstItemSoldTitle": "旧物换新！",
+  "lifeChangeAchievementFirstItemSwapMessage": "完成了第一次换物——衣柜与你的人生转变完美契合。",
+  "lifeChangeAchievementFirstItemSwapTitle": "焕然一新！",
+  "lifeChangeAchievementFirstItemUploadMessage": "第一件物品上传，象征你人生旅程的新起点。",
+  "lifeChangeAchievementFirstItemUploadTitle": "新篇开启！",
+  "lifeChangeAchievementFirstOutfitCreatedMessage": "你的第一套穿搭已记录——迎接全新阶段的完美搭配。",
+  "lifeChangeAchievementFirstOutfitCreatedTitle": "转变已记录！",
+  "lifeChangeAchievementFirstSelfieTakenMessage": "你的第一张自拍，见证了此刻——反映你不断变化的故事。",
+  "lifeChangeAchievementFirstSelfieTakenTitle": "变化已记录！",
+  "lifeChangeAchievementNoNewClothes90Message": "90 天的转变之旅！你的衣柜正在美丽地讲述新生活的故事。",
+  "lifeChangeAchievementNoNewClothes90Title": "90 天的蜕变！",
+  "lifeChangeAchievementNoNewClothes225Message": "225 天有意识的转变——你的衣柜正随生活演进。",
+  "lifeChangeAchievementNoNewClothes225Title": "转变先锋！",
+  "lifeChangeAchievementNoNewClothes405Message": "405 天优雅地面对生活变化——你和衣柜都在前行。",
+  "lifeChangeAchievementNoNewClothes405Title": "有型适应者！",
+  "lifeChangeAchievementNoNewClothes630Message": "630 天将穿搭与生活节奏对齐——你在每一个章节中都闪耀着光芒。",
+  "lifeChangeAchievementNoNewClothes630Title": "转变开拓者！",
+  "lifeChangeAchievementNoNewClothes900Message": "900 天掌握改变之道——你的衣柜自信地反映着你的成长旅程。",
+  "lifeChangeAchievementNoNewClothes900Title": "重塑引领者！",
+  "lifeChangeAchievementNoNewClothes1215Message": "1,215 天用衣柜映照生活的变化。你的适应力令人敬佩！",
+  "lifeChangeAchievementNoNewClothes1215Title": "改变建筑师！",
+  "lifeChangeAchievementNoNewClothes1575Message": "1,575 天优雅地驾驭生活转变。你的衣柜展现了智慧与成长。",
+  "lifeChangeAchievementNoNewClothes1575Title": "转变老手！",
+  "lifeChangeAchievementNoNewClothes1980Message": "1,980 天通过穿搭重塑风格——你的故事和衣柜完美契合，动人心弦。",
+  "lifeChangeAchievementNoNewClothes1980Title": "人生章节掌控者！"
 }
